--- a/index.html
+++ b/index.html
@@ -1312,7 +1312,7 @@
                     chatHistory.push({ role: "user", parts: [{ text: prompt }] });
 
                     const payload = { contents: chatHistory };
-                    const apiKey = ""; // A chave da API será fornecida em tempo de execução
+                    const apiKey = "AIzaSyAd8MFfaVlrBYrIX01LatFeHSnEuUznUIY"; // A chave da API será fornecida em tempo de execução
                     const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${apiKey}`;
 
                     const response = await fetch(apiUrl, {
